# model-card-auditor

./: .gitignore  CLAUDE.md  Dockerfile  README.md  SKILLS.md  TASKS.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
model_card_auditor/: __init__.py  client.py  models.py
model_card_auditor/data/: easy.json  hard.json  medium.json
model_card_auditor/server/: app.py  environment.py  graders.py
server/: app.py
tests/: test_environment.py  test_graders.py
